# loop_engineering

./: .env  .gitignore  CLAUDE.md  LOG.md  pyproject.toml
.commandcode/taste/: taste.md
.github/workflows/: ci.yml  malware-intel.yml
docs/: malware-intel-architecture.md  malware-intel-knowledge.md
domains/malware-intel/: README.md
harness/: README.md  autonomous-commandcode-prompt.md  commandcode-prompt.md  mcp-recommendations.md  multi-agent-supervisor.md
reports/: README.md
reports/2026-06-20/: iocs.csv  iocs.json  malwarebazaar-hash-iocs.yar  malwarebazaar-report.md  stix.json  technical-analysis.md
reports/2026-06-21/: iocs.csv  iocs.json  malwarebazaar-hash-iocs.yar  malwarebazaar-report.md  stix.json  technical-analysis.md
reports/2026-06-22/: iocs.csv  iocs.json  malwarebazaar-hash-iocs.yar  malwarebazaar-report.md  stix.json  technical-analysis.md
reports/2026-06-24/: iocs.csv  iocs.json  malwarebazaar-hash-iocs.yar  malwarebazaar-report.md  stix.json  technical-analysis.md
reports/2026-06-25/: iocs.csv  iocs.json  malwarebazaar-hash-iocs.yar  malwarebazaar-report.md  stix.json  technical-analysis.md
reports/2026-06-26/: iocs.csv  iocs.json  malwarebazaar-hash-iocs.yar  malwarebazaar-report.md  stix.json  technical-analysis.md
scripts/: collect_one_sample.py  commandcode_supervisor.py  run_malware_intel_loop.py  run_single_sample_loop.py  verify_single_sample_report.py
tests/: test_ioc.py  test_knowledge.py  test_malware_bazaar.py  test_run_malware_intel_loop.py  test_sample_static_analysis.py  test_static_code_analysis.py
(+93 files in other folders)
