[project]
name = "loop-engineering"
version = "0.1.0"
description = "Defensive malware intelligence loop for MalwareBazaar metadata and IOC reporting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
loop-intel = "loop_engineering.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
